--- a/ProjetWeb/accueil.html
+++ b/ProjetWeb/accueil.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="stylesheet" type="text/css" href="./Styles/style.css">
+    <link  rel="stylesheet" type="text/css" href="./Styles/styleMain.css">
     <title>QuizzDrapeauxDuMonde</title>
     <script src="./Scripts/script.js"></script>
 </head>
@@ -27,7 +27,7 @@
             <div class="page rules">
                 <img class="RulesPanneauDroit" src="./assets/signright.png" />
             
-               <a  href="#play">
+               <a  href="./Regles.html">
                 <img class="PlaneRules" src="./assets/planeRules.png"/>
                </a> 
                
