--- a/ProjetWeb/Jouer.html
+++ b/ProjetWeb/Jouer.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="stylesheet" type="text/css" href="./Styles/style.css">
+    <link  rel="stylesheet" type="text/css" href="./Styles/styleJoue.css">
+    <script src="./Scripts/scriptJeu.js"></script>
     <title>Jouer</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
         </nav>
 
     </header>
-
+    <h1>Quizz</h1>
     <div class="MainContent">
         <div>
             <img class="Flag" src="https://flagcdn.com/fr.svg"/>
@@ -30,14 +31,15 @@
             <form>
                 <label>Entrez votre Réponse : </label>
                 <input type="text">
-                <button>Valider !</button>
+               <button>Question suivante </button>
             </form>
 
         </div>
 
-        <div class="NextQuestion"> 
-            <button>Question Suivante</button>
+        <div class="numeroQuestion">
+            <p>Question numero <strong>1</strong> / 20 </p>
         </div>
+
         
 
     </div>
