--- a/ProjetWeb/Jouer.html
+++ b/ProjetWeb/Jouer.html
@@ -14,9 +14,9 @@
         <nav>
             <a href="./accueil.html"><img class="logo" src="./assets/result.png"/></a>
             <ul>
-                <li><a href="./Regles.html">Règles</a></li>
+                <li class="buttton" ><a class="linkPage"  href="./Regles.html">Règles</a></li>
                
-                <li><a href="./Apropos.html">A propos</a></li>
+                <li class="buttton"><a  class="linkPage" href="./Apropos.html">A propos</a></li>
             </ul>
         </nav>
 
@@ -62,6 +62,10 @@
               </thead>
         </table>
     </div>
+
+    <footer>
+        <p class="footertext">Site réalisé avec <strong>PA$$ION</strong> et <strong>Cramptés</strong></p>
+    </footer>
     
 </body>
 </html>
